# tentacle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
rom/: a.out  compile  rom.list  rom.s
src/: main.c  tentacle.c  tentacle.h
